fix(ui): fix jump after finish animation in small screen device

--- a/src/ui/pages/CredCardDetails/CredCardDetail.scss
+++ b/src/ui/pages/CredCardDetails/CredCardDetail.scss
@@ -58,13 +58,13 @@
         height: 0;
         overflow-y: hidden;
         opacity: 0;
-        margin-top: -1.25rem;
+        margin-top: -1.24rem;
       }
       to {
         height: 100vh;
         overflow-y: hidden;
         opacity: 1;
-        margin-top: -1.25rem;
+        margin-top: -1.24rem;
       }
     }
   }
@@ -80,14 +80,14 @@
         height: 100vh;
         overflow-y: hidden;
         opacity: 1;
-        margin-top: -1.25rem;
+        margin-top: -1.24rem;
       }
 
       to {
         height: 0;
         overflow-y: hidden;
         opacity: 0;
-        margin-top: -1.25rem;
+        margin-top: -1.24rem;
       }
     }
   }
