--- a/src/ui/pages/IdentifierCardDetails/IdentifierCardDetails.scss
+++ b/src/ui/pages/IdentifierCardDetails/IdentifierCardDetails.scss
@@ -59,14 +59,14 @@
           height: 0;
           overflow-y: hidden;
           opacity: 0;
-          margin-top: -1.25rem;
+          margin-top: -1.24rem;
         }
 
         to {
           height: 100vh;
           overflow-y: hidden;
           opacity: 1;
-          margin-top: -1.25rem;
+          margin-top: -1.24rem;
         }
       }
     }
@@ -83,14 +83,14 @@
         height: 100vh;
         overflow-y: hidden;
         opacity: 1;
-        margin-top: -1.25rem;
+        margin-top: -1.24rem;
       }
 
       to {
         height: 0;
         overflow-y: hidden;
         opacity: 0;
-        margin-top: -1.25rem;
+        margin-top: -1.24rem;
       }
     }
   }
